<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameRegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameRegister"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableStart="@drawable/username"
                android:drawablePadding="5dp"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegister"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableStart="@drawable/password"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordRegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordRegister"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableStart="@drawable/confirm_password"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="16" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameRegisterLayout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:drawableStart="@drawable/first_name"
                    android:drawablePadding="5dp"
                    android:hint="@string/first_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameRegisterLayout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameRegister"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:drawableStart="@drawable/last_name"
                    android:drawablePadding="5dp"
                    android:hint="@string/last_name" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthDateRegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthDateRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableStart="@drawable/bith_date"
                android:drawablePadding="5dp"
                android:hint="@string/bith_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/registerButtonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/register" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="219dp"
        android:layout_height="73dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/pcloud_orange_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>