...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameLogin"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableStart="@drawable/username"
                android:drawablePadding="5dp"
                android:hint="@string/username"
...
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/login" />

            <Button
                android:id="@+id/registerButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/register" />
        </LinearLayout>
...
